[tool.poetry]
name = "Hacker News Get"
version = "0.1.0"
description = ""
authors = ["Jordan Sweet <hello@jordandsweet.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
