[tool.poetry]
name = "hnget"
version = "0.1.0"
description = "Shows and opens links on Hacker news from the terminal"
authors = ["Jordan Sweet <hello@jordandsweet.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
