[tool.poetry]
name = "hnget"
version = "0.1.8"
description = "Shows and opens links on Hacker news from the terminal"
authors = ["Jordan Sweet <hello@jordandsweet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hnget = "hnget.application:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
